--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=learn
 
-
+# Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5433/learnDB
 spring.datasource.username=postgres
 spring.datasource.password=Tayal@4002
 
-#spring.jpa.hibernate.ddl-auto=update
+# Hibernate Configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Test Database Configuration (H2 in-memory database for tests)
+spring.test.database.replace=none
+spring.profiles.active=test
