--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -18,6 +18,14 @@ jobs:
         java-version: '8'
         distribution: 'adopt'
         cache: 'maven'
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16 
+
+    - name: Install dependencies
+      run: npm install   
     
     - name: Cache Maven packages
       uses: actions/cache@v3
@@ -38,88 +46,9 @@ jobs:
     - name: PMD Code Analysis
       run: mvn pmd:check
       
-    - name: Setup MCP Server
-      run: |
-        npm install -g @vscode/mcp-server
-        mcp-server init --config .vscode/mcp/config.json
-    
-    - name: Run MCP Review
-      id: mcp-review
-      run: |
-        REVIEW_OUTPUT=$(mcp-server review --pr ${{ github.event.pull_request.number }})
-        echo "review-output=$REVIEW_OUTPUT" >> $GITHUB_OUTPUT
-    
-    # Comment on PR with analysis results
-    - name: Comment PR
-      uses: actions/github-script@v6
-      if: always()
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const reviewOutput = '${{ steps.mcp-review.outputs.review-output }}' || 'No review output available';
-          const testResults = `
-          ### Test Results 🧪
-          ✅ Tests completed
-          
-          ### Static Analysis 🔍
-          - SpotBugs scan completed
-          - PMD analysis completed
-          
-          ### MCP Review Results 🤖
-          ${reviewOutput}
-          
-          Please review the detailed reports in the checks tab.
-          `;
-          
-          await github.rest.issues.createComment({
-            ...context.repo,
-            issue_number: context.issue.number,
-            body: testResults
-          });
-
-  security:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up JDK 8
-      uses: actions/setup-java@v3
-      with:
-        java-version: '8'
-        distribution: 'adopt'
-        cache: maven
-    
-    - name: Run OWASP Dependency Check
-      run: mvn org.owasp:dependency-check-maven:check
-      
-    - name: Run MCP Security Patterns
-      id: mcp-security
-      run: |
-        npm install -g @vscode/mcp-server
-        SECURITY_OUTPUT=$(mcp-server analyze --security --config .vscode/mcp/config.json)
-        echo "security-output=$SECURITY_OUTPUT" >> $GITHUB_OUTPUT
-    
-    # Comment on PR with security results
-    - name: Comment Security Results
-      uses: actions/github-script@v6
-      if: always()
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const securityOutput = '${{ steps.mcp-security.outputs.security-output }}' || 'No security analysis output available';
-          const securityResults = `
-          ### Security Scan Results 🔒
-          ✅ OWASP Dependency check completed
-          
-          ### MCP Security Analysis 🛡️
-          ${securityOutput}
-          
-          Please review the detailed security report in the checks tab.
-          `;
-          
-          await github.rest.issues.createComment({
-            ...context.repo,
-            issue_number: context.issue.number,
-            body: securityResults
-          });
+    - name: Run PR Review Bot
+      env:
+        APP_ID: ${{ secrets.APP_ID }}
+        PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+        INSTALLATION_ID: ${{ secrets.INSTALLATION_ID }}
+      run: node bot/index.js
