--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -27,7 +27,6 @@ jobs:
 
       - name: Install Node.js dependencies
         run: npm ci
-        working-directory: ./bot  # adjust if your bot is in another folder
 
       - name: Cache Maven packages
         uses: actions/cache@v3
@@ -53,5 +52,5 @@ jobs:
           APP_ID: ${{ secrets.APP_ID }}
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           INSTALLATION_ID: ${{ secrets.INSTALLATION_ID }}
-        run: node index.js
+        run: nodeBot/index.js
         working-directory: ./bot  # adjust if your script is in a subfolder
